study_with_me/study.css
.girl {
    height: 100vh;
    width: 100vw;
    overflow:hidden;
    margin: -5px -5px;
    background-image: url("assets/girl2_.gif");
    background-size: cover;
    background-position: center;
}

body {
    background-size: cover;

}

.top {
    /* for the top bar
    width: 105%;
    left:-5px;
    top:-5px;
    padding-bottom:10px;
    background-color:rgba(0, 0, 0, 0.5);
    position: fixed;
    opacity: 1;
    z-index:1000; */
    display: flex;
    position: fixed;
    top:30vh;
    margin-left: 30vw;
    margin-right: 30vw;
    z-index:1000;
    background-color:rgb(47, 64, 47);
    padding-bottom: 20px;
    border-radius: 40px;
    
}

/* .top:hover {
    opacity: 1;
} */

.bottom {
    position: fixed;
    right:0;
    bottom:0;
    height: 7vh;
}

.title {
    margin: 0;
    font-family: 'Silkscreen', cursive;
    font-size: 5vh;
    text-align: center;
    color: rgb(150, 228, 158);
    width: 100%;
    justify-content: center;
    text-shadow:2px 2px #003cff

}
.setting {
    font-family: 'Silkscreen', cursive;
    font-size:x-large;
    color: rgb(255, 255, 255);
    width: 30vw;
    display: flex;
    float:left;
    justify-content: center;
    cursor: pointer;
    text-align: center;
    text-shadow: 2px 2px #34447877;

}

#youtube {
    position:fixed;
}

.smallform {
    display: flex;
    cursor: pointer;
    justify-content: center;
    text-align: center;
    width: 100%;
}

.timesetting {
    font-family: 'Silkscreen', cursive;
    font-size:x-large;
    color: rgb(255, 255, 255);
    width: 40vw;
    display: flex;
    margin-bottom:15px;
    justify-content: center;
    cursor: pointer;
    text-align: center; 
}

#x {
    font-family: 'Silkscreen', cursive;
    font-size:x-large;
    color: rgb(255, 255, 255);
    position: absolute;
    background-color: #ff0000;
    text-align: center;
    top: 0;
    right: 0;
    border-radius: 5px;
    width: 30px;
}

.timesetting2 {
    font-family: 'Silkscreen', cursive;
    font-size:large;
    color: rgb(205, 205, 205);
    margin:0;
    cursor: pointer;
    text-align: center;
    width: 40vw;
}


input.startbutton {
    width:30px;
    cursor: pointer;
    background-color: #e2e2e2;

}
input.startbutton:hover {
   background-color: rgb(150, 228, 158);
}

input.resetbutton {
    width:80px;
    cursor: pointer;
}


.start {
    font-size:xx-large;
    padding:10px;
    border-radius:20px;
    background-color:lightblue;
    text-shadow:2px 2px darkblue;
    margin-bottom:0;
}

.start:hover {
    padding:10px;
    background-color:darkblue;
    text-shadow:2px 2px darkblue;
}


input#hour {
    width:22px;
}

input#minute {
    width:15px;
}

input#second {
    width:15px;
}

input#breakhour {
    width:15px;
}

input#breakminute {
    width:15px;
}

input#breakfreq {
    width:15px;
}

#background:hover {
color:yellow;
/* font-size:xx-large; */
text-shadow:2px 2px #ff0000;
}

#music:hover {
    color:lightgreen;
    /* font-size:xx-large; */
    text-shadow:2px 2px darkgreen;
    }
    
 #study:hover {
        color:blue;
        text-shadow:2px 2px #ff0000;
     }
        

.time{
    bottom:0;
    position:fixed;
    z-index: 1;
}

#welcome{
    font-family: 'Silkscreen', cursive;
    color: aliceblue;
    font-size:10vh;
    margin: auto;
    text-shadow:3px 3px blue;
}

#welcome:hover {
    color:blue;
    text-shadow:2px 2px #ff0000;
    cursor: pointer;
}


form {
    font-family: 'Silkscreen', cursive;

}

